Implement orchestration system
* Introduce PipelineReplicaMeter to PipelineReplica and OperatorReplica classes
* Introduce MetricManager interface and the implementation
* Introduce FlowDeploymentDef to model the currently deployed configuration
* Refactor id objects